--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@ body {
   background-color: #eef0f4;
   color: #432000;
   user-select: none;
+  font-weight: bold;  
 }
 
 .container {
@@ -33,14 +34,15 @@ input {
 }
 
 button {
-  color: #fdfdfd;
-  background-color: #ac485a;
+  color: #ffffff;
+  background-color: #dd778a;
   border: 0;
   padding: 15px;
   border-radius: 8px;
   font-size: 20px;
   text-align: center;
   font-family: "Rubik", sans-serif;
+
 }
 
 button:hover {
@@ -63,6 +65,7 @@ ul li {
   flex-grow: 1;
   text-align: center;
   font-size: 20px;
+  box-shadow: 1px 1px 3px pink;
 }
 
 ul li:hover {
